fixed genre card image and spacing of elements

--- a/client/src/pages/GameExplorer/Games.css
+++ b/client/src/pages/GameExplorer/Games.css
@@ -61,17 +61,17 @@
     color: rgba(255,255,25,0.05)
 }
 
-.game-card .game-card-img{
+.game-card .game-card-img img{
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
     z-index: 10000;
     width: 100%;
-    height: 220px;
+    height: auto;
     transition: 0.5s;
 }
 
-.game-card:hover .game-card-img{
+.game-card:hover .game-card-img img{
     top:0%;
     transform: translateY(0%);
 }
@@ -113,6 +113,7 @@
     visibility: hidden;
     padding-top: 0;
     padding-bottom: 0;
+    margin-top: 20px !important;
 }
 
 .game-card:hover .game-card-opts{
@@ -181,7 +182,7 @@
     opacity: 0;
     transform: translateY(50px);
     transition: 0.5s;
-    margin-top: 0;
+    margin-top: 25px !important;
 }
 
 .game-card:hover .game-card-desc a{
